--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name" />
+        <activity
+            android:name=".CreateAccActivity"/>
         <activity android:name=".ProfileActivity" >
         </activity>
         <activity android:name=".FriendsActivity" >
