--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,23 +15,17 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name" >
+        </activity>
         <activity
-            android:name=".CreateAccActivity"/>
-        <activity android:name=".ProfileActivity" >
+            android:name=".CreateAccActivity">
         </activity>
         <activity android:name=".FriendsActivity" >
-        </activity>
-        <activity
-            android:name=".AddFriendActivity"
-            android:label="@string/title_activity_add_friend"
-            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
