--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         </activity>
         <activity android:name=".FriendsActivity" >
         </activity>
+        <activity android:name=".PopupAddFriend" android:theme="@style/AppTheme.CustomTheme" >
+        </activity>
     </application>
 
 </manifest>
