All | Remove vac and edit vac check

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:name=".CreateAccActivity">
         </activity>
         <activity
+            android:name=".EditActivity">
+        </activity>
+        <activity
             android:name=".FlowActivity">
         </activity>
         <activity android:name=".FriendsActivity" >
