--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        >
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name" >
@@ -34,9 +35,19 @@
         <activity
             android:name=".FlowActivity">
         </activity>
-        <activity android:name=".FriendsActivity" >
+        <activity
+            android:name=".MainActivity">
         </activity>
-        <activity android:name=".UserProfileActivity" >
+        <activity
+            android:name=".SettingsActivity">
+        </activity>
+        <activity
+            android:name=".FriendsActivity" >
+        </activity>
+        <activity
+            android:name=".UserProfileActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            >
         </activity>
     </application>
 
