--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
 
 
     <application
@@ -39,6 +40,9 @@
         </activity>
         <activity
             android:name=".FriendsActivity" >
+        </activity>
+        <activity
+            android:name=".CameraActivity" >
         </activity>
         <activity
             android:name=".UserProfileActivity"
